<resources>
	<string translatable="false" name="app_name">Briar</string>
	<string name="setup_title">Briar Setup</string>
	<string name="setup_explanation">Your Briar account is stored encrypted on your device, not in the cloud. If you uninstall Briar or forget your password, there\'s no way to recover your account and your data.</string>
	<string name="choose_nickname">Choose your nickname</string>
	<string name="choose_password">Choose your password</string>
	<string name="confirm_password">Confirm your password</string>
	<string name="name_too_long">Name is too long</string>
	<string name="password_too_weak">Password is too weak</string>
	<string name="passwords_do_not_match">Passwords do not match</string>
	<string name="create_account_button">Create Account</string>
	<string name="progress_title_please_wait">Please wait..</string>
	<string name="enter_password">Enter your password:</string>
	<string name="try_again">Wrong password, try again</string>
	<string name="sign_in_button">Sign In</string>
	<string name="forgotten_password">I have forgotten my password</string>
	<string name="dialog_title_lost_password">Lost Password</string>
	<string name="dialog_message_lost_password">Your Briar account is stored encrypted on your device, not in the cloud, so we can\'t reset your password. Would you like to delete your account and start again?\n\nCaution: Your identities, contacts and messages will be permanently lost.</string>
	<string name="startup_failed_notification_title">Briar could not start</string>
	<string name="startup_failed_notification_text">You may need to reinstall Briar.</string>
	<string name="startup_failed_activity_title">Briar Startup Failure</string>
	<string name="startup_failed_db_error">For some reason, your Briar database is corrupted beyond repair. Your account, your data and all your contact connections are lost. Unfortunately, you need to reinstall Briar und set up a new account.</string>
	<string name="startup_failed_service_error">Briar was unable to start a required plugin. Reinstalling Briar usually solves this problem. However, please note that you will then lose your account and all data associated with it since Briar is not using central servers to store your data on.</string>
	<string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
	<string name="dialog_title_welcome">Welcome to Briar</string>
	<string name="dialog_welcome_message">Add a contact to start communicating securely or press the icon in the upper left corner of the screen for more options.</string>
	<string name="nav_drawer_open_description">Open the navigation drawer</string>
	<string name="nav_drawer_close_description">Close the navigation drawer</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="transport_tor">Internet</string>
	<string name="transport_bt">Bluetooth</string>
	<string name="transport_lan">Wi-Fi</string>
	<string name="ongoing_notification_title">Signed into Briar</string>
	<string name="ongoing_notification_text">Touch to open Briar.</string>
	<plurals name="private_message_notification_text">
		<item quantity="one">New private message.</item>
		<item quantity="other">%d new private messages.</item>
	</plurals>
	<plurals name="group_message_notification_text">
		<item quantity="one">New group message.</item>
		<item quantity="other">%d new group messages.</item>
	</plurals>
	<plurals name="forum_post_notification_text">
		<item quantity="one">New forum post.</item>
		<item quantity="other">%d new forum posts.</item>
	</plurals>
	<plurals name="blog_post_notification_text">
		<item quantity="one">New blog post.</item>
		<item quantity="other">%d new blog posts.</item>
	</plurals>
	<string name="now">now</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="options">Options</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="send">Send</string>
	<string name="no_data">No data</string>
	<string name="ellipsis">…</string>
	<string name="text_too_long">The entered text is too long</string>
	<string name="show_onboarding">Show Help Dialog</string>
	<string name="no_contacts">It seems that you are new here and have no contacts yet.\n\nTap the + icon at the top and follow the instructions to add some friends to your list.\n\nPlease remember: You can only add new contacts face-to-face to prevent anyone from impersonating you or reading your messages in the future.</string>
	<string name="date_no_private_messages">No messages.</string>
	<string name="no_private_messages">This is the conversation view.\n\nThere seems to be a lack of conversation.\n\nJust tap the input field at the bottom to start a conversation.</string>
	<string name="message_hint">Type message</string>
	<string name="delete_contact">Delete contact</string>
	<string name="dialog_title_delete_contact">Confirm Contact Deletion</string>
	<string name="dialog_message_delete_contact">Are you sure that you want to remove this contact and all messages exchanged with this contact?</string>
	<string name="contact_deleted_toast">Contact deleted</string>
	<string name="add_contact_title">Add a Contact</string>
	<string name="your_nickname">Choose the identity you want to use:</string>
	<string name="face_to_face">You must meet up with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
	<string name="continue_button">Continue</string>
	<string name="your_invitation_code">Your invitation code is</string>
	<string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
	<string name="searching_format">Searching for contact with invitation code %06d\u2026</string>
	<string name="connection_failed">Connection failed</string>
	<string name="could_not_find_contact">Briar could not find your contact nearby</string>
	<string name="could_not_open_camera">Could not access your camera. Please try again!</string>
	<string name="try_again_button">Try Again</string>
	<string name="connected_to_contact">Connected to contact</string>
	<string name="calculating_confirmation_code">Calculating confirmation code\u2026</string>
	<string name="your_confirmation_code">Your confirmation code is</string>
	<string name="enter_confirmation_code">Please enter your contact\'s confirmation code:</string>
	<string name="waiting_for_contact">Waiting for contact\u2026</string>
	<string name="waiting_for_contact_to_scan">Waiting for contact to scan and connect\u2026</string>
	<string name="exchanging_contact_details">Exchanging contact details\u2026</string>
	<string name="codes_do_not_match">Codes do not match</string>
	<string name="interfering">This could mean that someone is trying to interfere with your connection</string>
	<string name="contact_added_toast">Contact added: %s</string>
	<string name="contact_already_exists">Contact %s already exists</string>
	<string name="contact_exchange_failed">Contact exchange failed</string>
	<string name="qr_code_invalid">The QR code is invalid</string>
	<string name="connecting_to_device">Connecting to device\u2026</string>
	<string name="authenticating_with_device">Authenticating with device\u2026</string>
	<string name="connection_aborted_local">Connection aborted by us! This could mean that someone is trying to interfere with your connection</string>
	<string name="connection_aborted_remote">Connection aborted by your contact! This could mean that someone is trying to interfere with your connection</string>
	<string name="introduction_onboarding_title">Introduce your contacts</string>
	<string name="introduction_onboarding_text">You can introduce your contacts to each other, so they don\'t need to meet in person to connect on Briar.</string>
	<string name="introduction_activity_title">Select Contact</string>
	<string name="introduction_message_title">Introduce Contacts</string>
	<string name="introduction_message_text">You can compose a message that will be sent to %1$s and %2$s along with your introduction:</string>
	<string name="introduction_message_hint">Type message (optional)</string>
	<string name="introduction_button">Make Introduction</string>
	<string name="introduction_sent">Your introduction has been sent.</string>
	<string name="introduction_error">There was an error making the introduction.</string>
	<string name="introduction_response_error">Error when responding to introduction</string>
	<string name="dialog_button_introduce">Introduce</string>
	<string name="introduction_request_sent">You have asked to introduce %1$s to %2$s.</string>
	<string name="introduction_request_received">%1$s has asked to introduce you to %2$s. Do you want to add %2$s to your contact list?</string>
	<string name="introduction_request_exists_received">%1$s has asked to introduce you to %2$s, but %2$s is already in your contact list. Since %1$s might not know that, you can still respond:</string>
	<string name="introduction_request_answered_received">%1$s has asked to introduce you to %2$s.</string>
	<string name="groups_compose_message">Compose Message</string>
	<string name="groups_member_list">Member List</string>
	<string name="groups_invite_members">Invite Members</string>
	<string name="groups_leave">Leave Group</string>
	<string name="groups_dissolve">Dissolve Group</string>
	<string name="forum_share_button">Share Forum</string>
	<string name="forum_share_message">You may compose an optional invitation message that will be sent to the selected contacts.</string>
	<string name="sharing_status">Sharing Status</string>
	<string name="blogs_write_blog_post">Write Blog Post</string>
	<string name="blogs_remove_blog">Remove Blog</string>
	<string name="blogs_sharing_share">Share Blog</string>
	<string name="network_settings_title">Networks</string>
	<string name="bluetooth_setting">Connect via Bluetooth</string>
	<string name="tor_mobile_setting">Connect via Tor</string>
	<string name="panic_setting">Panic button setup</string>
	<string name="panic_setting_title">Panic button</string>
	<string name="panic_setting_hint">Configure how Briar will react when you use a panic button app</string>
	<string name="panic_app_setting_title">Panic Button App</string>
	<string name="panic_app_setting_summary">No app has been set</string>
	<string name="lock_setting_title">Sign Out</string>
	<string name="lock_setting_summary">Sign out of Briar if a panic button is pressed</string>
	<string name="purge_setting_title">Delete Account</string>
	<string name="purge_setting_summary">Delete your Briar account if a panic button is pressed. Caution: This will permanently delete your identities, contacts and messages</string>
	<string name="notification_settings_title">Notifications</string>
	<string name="notify_private_messages_setting">Show alerts for private messages</string>
	<string name="notify_vibration_setting">Vibrate</string>
	<string name="notify_sound_setting">Sound</string>
	<string name="feedback_settings_title">Feedback</string>
	<string name="send_feedback">Send feedback</string>
	<string name="link_warning_title">Link Warning</string>
	<string name="link_warning_intro">You are about to open the following link with an external app.</string>
	<string name="link_warning_text">This can be used to identify you. Think about whether you trust the person that sent you this link and consider opening it with Orfox.</string>
	<string name="link_warning_open_link">Open Link</string>
</resources>