<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/network_settings_title">

		<ListPreference
			android:defaultValue="false"
			android:entries="@array/bt_setting_names"
			android:entryValues="@array/boolean_array"
			android:key="pref_key_bluetooth"
			android:persistent="false"
			android:summary="%s"
			android:title="@string/bluetooth_setting"/>

		<ListPreference
			android:defaultValue="true"
			android:entries="@array/tor_mobile_setting_names"
			android:entryValues="@array/boolean_array"
			android:key="pref_key_tor_mobile"
			android:persistent="false"
			android:summary="%s"
			android:title="@string/tor_mobile_setting"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/panic_setting_title">

		<Preference
			android:summary="@string/panic_setting_hint"
			android:title="@string/panic_setting">

			<intent
				android:targetClass="org.briarproject.android.panic.PanicPreferencesActivity"
				android:targetPackage="org.briarproject"/>

		</Preference>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/notification_settings_title">

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="pref_key_notify_private_messages"
			android:persistent="false"
			android:title="@string/notify_private_messages_setting"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="pref_key_notify_vibration"
			android:persistent="false"
			android:title="@string/notify_vibration_setting"/>

		<Preference
			android:key="pref_key_notify_sound"
			android:title="@string/notify_sound_setting"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/crash_report_settings_title">

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="acra.enable"
			android:title="@string/enable_acra_setting"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:dependency="acra.enable"
			android:key="acra.syslog.enable"
			android:title="@string/acra_syslog_setting"/>

		<EditTextPreference
			android:dependency="acra.enable"
			android:key="acra.user.email"
			android:inputType="textEmailAddress"
			android:summary=""
			android:title="@string/acra_user_email_setting"/>

		<CheckBoxPreference
			android:defaultValue="false"
			android:dependency="acra.enable"
			android:key="acra.alwaysaccept"
			android:title="@string/acra_alwaysaccept_setting"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/feedback_settings_title">

		<Preference
			android:key="pref_key_send_feedback"
			android:title="@string/send_feedback"/>

	</PreferenceCategory>

</PreferenceScreen>