<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_group_compose_message"
		android:icon="@drawable/forum_item_create_white"
		android:title="@string/groups_compose_message"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_group_member_list"
		android:enabled="false"
		android:icon="@drawable/ic_group_white"
		android:title="@string/groups_member_list"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_group_invite"
		android:enabled="false"
		android:icon="@drawable/ic_add_white"
		android:title="@string/groups_invite_members"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_group_leave"
		android:icon="@drawable/action_delete_white"
		android:title="@string/groups_leave"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_group_dissolve"
		android:icon="@drawable/action_delete_white"
		android:title="@string/groups_dissolve"
		app:showAsAction="never"/>

</menu>