<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/margin_large">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/link_warning_title"
			android:textColor="@color/briar_primary"
			android:textSize="@dimen/text_size_large"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_large"
			android:text="@string/link_warning_intro"
			android:textColor="@color/briar_primary"
			android:textSize="@dimen/text_size_medium"/>

		<TextView
			android:id="@+id/urlView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_large"
			android:textIsSelectable="true"
			android:typeface="monospace"
			tools:text="http://very.bad.site.com"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_large"
			android:text="@string/link_warning_text"
			android:textColor="@color/briar_primary"
			android:textSize="@dimen/text_size_medium"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cancelButton"
			style="@style/BriarButtonFlat.Positive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/cancel"/>

		<Button
			android:id="@+id/openButton"
			style="@style/BriarButtonFlat.Negative"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/link_warning_open_link"/>

	</LinearLayout>

</LinearLayout>