<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/introductionText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin_activity_horizontal"
		android:text="@string/forum_share_message"
		android:textColor="@color/briar_text_primary"
		android:textSize="@dimen/text_size_medium"/>

	<org.briarproject.android.view.LargeTextInputView
		android:id="@+id/invitationMessageView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="bottom"
		app:buttonText="@string/forum_share_button"
		app:fillHeight="true"
		app:hint="@string/introduction_message_hint"/>

</LinearLayout>
