<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/choose_nickname"
			android:textSize="18sp"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/nickname_entry_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:errorEnabled="true">

			<EditText
				android:id="@+id/nickname_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text|textCapWords"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/choose_password"
			android:textSize="18sp"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_entry_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:errorEnabled="true">

			<EditText
				android:id="@+id/password_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/confirm_password"
			android:textSize="18sp"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_confirm_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:errorEnabled="true">

			<EditText
				android:id="@+id/password_confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<org.briarproject.android.util.StrengthMeter
			android:id="@+id/strength_meter"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="invisible"/>

		<Button
			android:id="@+id/create_account"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:enabled="false"
			android:text="@string/create_account_button"/>

		<ProgressBar
			android:id="@+id/progress_wheel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:visibility="gone"/>
	</LinearLayout>
</ScrollView>