<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

		<TextView
			android:id="@+id/stepView"
			style="@style/BriarTextBody"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			tools:text="Step 1/3"/>

		<TextView
			android:id="@+id/yourNicknameView"
			style="@style/BriarTextBody"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/your_nickname"
			android:layout_marginTop="@dimen/margin_medium"/>

		<Spinner
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/spinner"
			android:spinnerMode="dropdown"
			android:layout_marginTop="@dimen/margin_medium"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/imageView"
			android:src="@drawable/bluetooth"
			android:scaleType="fitCenter"
			android:adjustViewBounds="true"
			android:layout_marginTop="@dimen/margin_medium"/>

		<TextView
			android:id="@+id/faceToFaceView"
			style="@style/BriarTextBody"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/face_to_face"
			android:layout_marginTop="@dimen/margin_medium"/>

		<Button
			android:id="@+id/continueButton"
			style="@style/BriarButton.Default"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/continue_button"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/margin_medium"/>
	</LinearLayout>

</ScrollView>